--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "echarts": "^4.2.0-rc.1",
     "element-ui": "^2.4.6",
     "vant": "^1.3.0",
     "vue": "^2.5.2",
